fix for site background pattern issues on smaller screens

--- a/src/sass/sections/_site.scss
+++ b/src/sass/sections/_site.scss
@@ -135,7 +135,7 @@
 			transform: translate(-18%, 50%);
 			left: 0%;
 			display: block;
-			// height: 135vh;
+			width: 135vw;
 		}
 
 		.bg-pattern-2 {
@@ -144,7 +144,7 @@
 			transform: translate(-30%, 50%);
 			left: 0%;
 			display: block;
-			// height: 135vh;
+			width: 135vw;
 		}
 
 		// .bg-pattern-1 {
